# learn_docker

./: .env  .gitignore  Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
learn_docker/: manage.py
learn_docker/docker_app/: admin.py  apps.py  models.py  urls.py  views.py
learn_docker/docker_app/migrations/: 0001_initial.py  0002_blog_author.py
learn_docker/docker_app/templates/learn_docker/: blog_list.html  index.html
learn_docker/learn_docker/: asgi.py  local_settings.py  settings.py  urls.py  wsgi.py
