[tool.poetry]
name = "learn-docker"
version = "0.1.0"
description = ""
authors = ["joanico <joanico@catalpa.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"
python-dotenv = "^1.0.1"
gunicorn = "^23.0.0"
psycopg-binary = "^3.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
